# CodexIAChat

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  security_best_practices_report.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: security.yml  test.yml
docs/: current_architecture.md  current_decisions.md  current_state.md  index.md  mvp_python_configuration.md  mvp_python_quickstart.md  nats_private_setup.md  open_questions.md  publication_checklist.md  runtime_scope_rationale.md  security_limits.md  security_model.md  worker_server_usage.md
docs/api/: current_contracts.md
docs/specs/agentbus/: AGENTBUS_CODEX_MAC_WINDOWS_LINUX.md
examples/: server.config.yaml  worker.config.yaml
schemas/: result.schema.json  task.schema.json
src/codexiachat/agentbus/: __init__.py  cli.py  config.py  errors.py  models.py  security.py  server.py  store.py  worker.py
tests/: test_agentbus_security.py
